# chatbotai-be

./: .dockerignore  .env.example  AZURE_AI_SEARCH_SETUP.md  DATABRICKS_AUTOMATION_GUIDE.md  DATABRICKS_SETUP_GUIDE.md  DFD.md  Dockerfile  ERD.md  FRONTEND_GUIDE.md  PANDUAN_MENJALANKAN_PROYEK.md  analisis_kebutuhan.md  architecture.md  databricks_ingestion_notebook.py  docker-compose.yml  flowchart_aplikasi.md  pyproject.toml  requirements.txt  staticwebapp.config.json  temp_ingest.py  use_case_aplikasi.md  use_case_diagram.md
.github/workflows/: main_chatbotai.yml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  ingest.py
app/core/: clients.py  config.py
app/schemas/: chat.py  token.py  user.py
app/services/: auth_service.py  chat_history_service.py  rag_service.py
app/utils/: security.py
